code/outgoing-traffic/serviceentry-google-overwrite.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: google-https
  namespace: echoserver
spec:
  hosts:
  - www.google.de
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: STATIC
  endpoints:
    - address: 34.159.147.75
