code/outgoing-traffic/serviceentry-google.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: google-https
  namespace: outgoing-traffic
spec:
  hosts:
  - www.google.de
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
